# groceries_cli

./: .gitignore  README.md  cli.py  main.py  models.py  pantry.py  planner.py  pyproject.toml  recipes.py  storage.py  test.py  units.py  utils.py
data/: about_data.md  data copy.json  data.json
data/backup/: 2026-01-18_14-56-02_data.json  2026-01-18_14-58-07_data.json  2026-01-18_15-00-25_data.json  2026-01-18_15-05-30_data.json  2026-01-18_15-20-23_data.json  2026-01-18_15-22-42_data.json  2026-01-18_15-23-03_data.json
src/grocery/: cli.py  main.py  pantry.py  planner.py  recipes.py  storage.py  utils.py
